# incopter-web

./: data.md
backend/: .env.example  Cargo.toml
backend/src/: main.rs
deploy/: Caddyfile  deploy.sh  incopter-backend.service
frontend/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
frontend/.astro/: settings.json
frontend/public/: sitemap.xml
frontend/src/components/: Footer.astro  Navbar.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: about.astro  contact.astro  index.astro  services.astro
