[package]
name    = "incopter-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum          = "0.7"
tokio         = { version = "1", features = ["full"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
lettre        = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
tower-http    = { version = "0.5", features = ["cors"] }
dotenvy       = "0.15"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
